# vendr

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  LICENSE.md  README.md  flake.nix  justfile  meson.build  meson.options  vendr.toml
aux/: meson-pi-i18n.sh
doc/: vendr.1.scd.in  vendr.toml.5.scd.in
examples/: files.toml
i18n/po/: de.po  es.po  fr.po
licenses/: README.md
misc/: cloc-ignores  vendr.pc.in
misc/completions/: _vendr  vendr.bash  vendr.fish
misc/packaging/arch-linux/: PKGBUILD  PKGBUILD-git
misc/scripts/: i18n.sh  static-env.sh
src/: help.hpp  i18n.hpp  macros.hpp  main.cpp  vendr.hpp
subprojects/: boost.wrap  cpr.wrap  libgit2.wrap  mbedtls.wrap
subprojects/packagefiles/mbedtls/: meson.build
