option('static-libcurl',
       type: 'boolean',
       value: false,
       description: 'link libcurl static')

option('static-libcpr',
       type: 'boolean',
       description: 'link libcpr static')

option('static-tomlpp',
       type: 'boolean',
       value: false,
       description: 'link libtomlplusplus static')

option('static-libgit2',
       type: 'boolean',
       value: false,
       description: 'link libgit2 static')

option('tomlpp-header-only',
       type: 'boolean',
       value: true,
       description: 'build with tomlplusplus in header-only mode')

option('static-cpp',
       type: 'boolean',
       value: false,
       description: 'link c++ stdlib static')

option('system-argshxx',
       type: 'boolean',
       value: false,
       description: 'use system args.hxx header')

option('man-pages',
       type: 'feature',
       value: 'auto',
       description: 'generate manual pages; requires scdoc')

option('shell-completions',
       type: 'array',
       choices: ['bash', 'fish', 'zsh'],
       value: ['bash', 'fish', 'zsh'],
       description: 'install shell completions for the given shell(s)')

option('gen-pkgconfig',
       type: 'boolean',
       value: true,
       description: 'generate/install a pkg-config file for vendr')

option('docdir',
       type: 'string',
       value: '',
       description: 'path to install documentation relative to prefix, default [PREFIX/share/doc/vendr-<version>]')

option('install-docs',
       type: 'boolean',
       value: true,
       description: 'install examples and licenses to DOCDIR')